app-test/testdata/typesystem/neg/pattern-matching-alternative-pattern-type/src/patmat.cal
namespace patmat:
    int a;
    actor AlternativePatternType() ==> int OUT:
        do
            OUT <--
                case a of
                    true : 1 end // error
                    _ : 0 end
                end;
        end
    end
end